@@ -1200,6 +1200,10 @@ Opencv_Init(Tcl_Interp *interp)
         (Tcl_ObjCmdProc *) fillConvexPoly,
         (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
 
+    Tcl_CreateObjCommand(interp, "::" NS "::fillPoly",
+        (Tcl_ObjCmdProc *) fillPoly,
+        (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
+
     Tcl_CreateObjCommand(interp, "::" NS "::line",
         (Tcl_ObjCmdProc *) line,
         (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
